--- a/next.html
+++ b/next.html
@@ -167,8 +167,8 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop><source src="video17.mp4" type="video/mp4"></video>
-    <video autoplay muted loop><source src="video18.mp4" type="video/mp4"></video>
+    <video autoplay muted loop><source src="video17.MP4" type="video/mp4"></video>
+    <video autoplay muted loop><source src="video18.MP4" type="video/mp4"></video>
     <video autoplay muted loop><source src="video3.mp4" type="video/mp4"></video>
     <video autoplay muted loop><source src="video4.mp4" type="video/mp4"></video>
     <video autoplay muted loop><source src="video5.mp4" type="video/mp4"></video>
@@ -236,4 +236,5 @@
 
 </body>
 </html>
+
 
